--- a/index.html
+++ b/index.html
@@ -7,53 +7,34 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <div class="container">
-      <div class="containerButtons">
-        <button id="btnHit">Delen</button>
-        <button id="btnReplay">&#9658;</button>
-        <button id="btnStand">Pas</button>
+    <div class="containerPlay">
+      <div class="containerCards">
+        <p>Player</p>
+        <p id="scorePlayer">score:</p>
+        <p>kaarten:</p>
+        <p class="cards Player"></p>
       </div>
-      <div class="containerPlay">
-        <ul>
-          <li>S</li>
-          <li>P</li>
-          <li>E</li>
-          <li>L</li>
-          <li>E</li>
-          <li>R</li>
-        </ul>
-        <div class="containerPlayer">
-          <p id="scorePlayer">score:</p>
-          <br>
-          <p>info:</p>
-          <div class="containerInfo">
-            <p class="info Player"></p>
-            <p class="info Player"></p>
-          </div>
-          <p>kaarten:</p><br>
-          <p class="cards Player"></p>
+      <div class="containerAction">
+        <div class="containerButtons">
+          <button id="btnHit">Delen</button>
+          <button id="btnReplay">&#9658;</button>
+          <button id="btnStand">Pas</button>
         </div>
-        <div class="containerDealer">
-          <p id="scoreDealer">score:</p>
-          <br>
-          <p>info:</p>
-          <div class="containerInfo">
-            <p class="info Dealer"></p>
-            <p class="info Dealer"></p>
-          </div>
-          <p>kaarten:</p><br>
-          <p class="cards Dealer"></p>
-        </div>  
-        <ul>
-          <li>D</li>
-          <li>E</li>
-          <li>A</li>
-          <li>L</li>
-          <li>E</li>
-          <li>R</li>
-        </ul>
+        <p>info:</p>
+        <div class="containerInfo">
+          <p class="info Player"></p>
+          <p class="info Player"></p>
+          <p class="info Dealer"></p>
+          <p class="info Dealer"></p>
+        </div>   
+      </div>
+      <div class="containerCards">
+        <p>Dealer</p>
+        <p id="scoreDealer">score:</p>
+        <p>kaarten:</p>
+        <p class="cards Dealer"></p>
       </div>   
-    </div>
+    </div>   
     <script src="./script.js"></script>
   </body>
 </html>
