Change name/text and function of all three buttons

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       </div>
       <div class="containerAction">
         <div class="containerButtons">
-          <button id="btnHit">Delen</button>
-          <button id="btnReplay">&#9658;</button>
-          <button id="btnStand">Pas</button>
+          <button id="btnHit">Hit</button>
+          <button id="btnReplay">Deal</button>
+          <button id="btnStand">Stand</button>
         </div>
         <p>info:</p>
         <div class="containerInfo">
