Refactor all code

--- a/index.html
+++ b/index.html
@@ -10,27 +10,29 @@
     <div class="containerPlay">
       <div class="containerCards">
         <p>Player</p>
-        <p id="scorePlayer">score:</p>
+        <p>score:</p>
+        <p id="scorePlayer"></p>
         <p>kaarten:</p>
         <p class="cards Player"></p>
       </div>
       <div class="containerAction">
         <div class="containerButtons">
           <button id="btnHit">Hit</button>
-          <button id="btnReplay">Deal</button>
+          <button id="btnDeal">Deal</button>
           <button id="btnStand">Stand</button>
         </div>
-        <p>info:</p>
+       <br>
         <div class="containerInfo">
           <p class="info Player"></p>
           <p class="info Player"></p>
-          <p class="info Dealer"></p>
-          <p class="info Dealer"></p>
+          <p class="info Player"></p>
+          <p class="info Player"></p>
         </div>   
       </div>
       <div class="containerCards">
         <p>Dealer</p>
-        <p id="scoreDealer">score:</p>
+        <p>score:</p>
+        <p id="scoreDealer" class="hide"></p>
         <p>kaarten:</p>
         <p class="cards Dealer"></p>
       </div>   
