Create function to show playing card images

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <p>Player</p>
         <p>score:</p>
         <p id="scorePlayer"></p>
-        <p>kaarten:</p>
-        <p class="cards Player"></p>
+        <div class="cardsPlayer"></div>
       </div>
       <div class="containerAction">
         <div class="containerButtons">
@@ -33,8 +32,7 @@
         <p>Dealer</p>
         <p>score:</p>
         <p id="scoreDealer" class="hide"></p>
-        <p>kaarten:</p>
-        <p class="cards Dealer"></p>
+        <div class="cardsDealer"></div>
       </div>   
     </div>   
     <script src="./script.js"></script>
