Improve readability of 'lifeList'

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
         <p class="name">PLAYER</p>
         <p class="info extra"></p>
         <div class="containerScore">
-          <p>score:</p>
-          <p class="scorePlayer">0</p>
+          <p class="smallSans">score:</p>
+          <p class="smallSans scorePlayer">0</p>
         </div>
         <div class="cardsPlayer"></div>
       </div>
       <div class="containerAction">
         <div class="containerProgress">
           <div class="containerRndLvs">
-            <p>round</p>
+            <p class="smallSans">round</p>
             <p class="largeNr rounds"></p>
           </div>
           <div class="containerRndLvs">
             <p class="largeNr lives"></p>
-            <p class="lifeTxt">lives</p>
+            <p class="lifeTxt smallSans">lives</p>
           </div>
         </div>
         <div class="containerButtons">
@@ -39,56 +39,52 @@
           <br>
           <p class="info"></p>
         </div>
-        <div class="containerBlJack">
-          <div class="blJackTitle">
-            <p>BLACKJACK</p>
-          </div>
-          <div class="containerList">
-            <ul class="lifeList">
-              <li>
-                <span class="spanList">+1 life:</span>
-                <br>Dealer's hand value is too high (BUST).
-              </li>
-              <li>
-                <span class="spanList">+2 lives:</span>
-                <br>Player beats Dealer with higher hand value.
-              </li>
-              <li>
-                <span class="spanList">+3 lives:</span>
-                <br>Player's hand value is 21 points.
-              </li>
-              <li>
-                <span class="spanList">+5 lives:</span>
-                <br>Player draws BLACKJACK (Ace + 10).
-              </li>
-            </ul>
-            <ul class="lifeList">
-              <li>
-                <span class="spanList">-1 life:</span>
-                <br>Player's hand value is 1 point too high (BUST).
-              </li>
-              <li>
-                <span class="spanList">-1 lives:</span>
-                <br>Dealer beats Player with higher hand value.
-              </li>
-              <li>
-                <span class="spanList">-2 lives:</span>
-                <br>Player's hand value is too high (BUST).
-              </li>
-              <li>
-                <span class="spanList">-2 lives:</span>
-                <br>Dealer draws BLACKJACK.
-              </li>
-            </ul>
-          </div>   
+        <div class="blJackTitle">
+          <p>BLACKJACK</p>
         </div>
+        <ul class="lifeList one">
+          <li>
+            <span class="spanList">+1 life:</span>
+            Dealer's hand value is too high (BUST).
+          </li>
+          <li>
+            <span class="spanList">+2 lives:</span>
+            Player beats Dealer with higher hand value.
+          </li>
+          <li>
+            <span class="spanList">+3 lives:</span>
+            Player's hand value is 21 points.
+          </li>
+          <li>
+            <span class="spanList">+5 lives:</span>
+            Player draws BLACKJACK (Ace + 10).
+          </li>
+        </ul>
+        <ul class="lifeList">
+          <li>
+            <span class="spanList">-1 life:</span>
+            Player's hand value is 1 point too high (BUST).
+          </li>
+          <li>
+            <span class="spanList">-1 lives:</span>
+            Dealer beats Player with higher hand value.
+          </li>
+          <li>
+            <span class="spanList">-2 lives:</span>
+            Player's hand value is too high (BUST).
+          </li>
+          <li>
+            <span class="spanList">-2 lives:</span>
+            Dealer draws BLACKJACK.
+          </li>
+        </ul> 
       </div>
       <div class="containerCards"> 
         <p class="name">DEALER</p>
         <p class="info extra"></p>
         <div class="containerScore">
-          <p>score:</p>
-          <p class="scoreDealer hide">0</p>
+          <p class="smallSans">score:</p>
+          <p class="smallSans scoreDealer hide">0</p>
         </div>
         <div class="cardsDealer"></div>
       </div>   
