Fix bug 'jumping' cards, refactor CSS code

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <body>
     <div class="containerPlay">
       <div class="containerCards">
-        <p class="name">PLAYER</p>
-        <p class="info extra"></p>
-        <div class="containerScore">
-          <p class="smallSans">score:</p>
-          <p class="smallSans scorePlayer">0</p>
+        <div class="containerCardsInfo">
+          <p class="name">PLAYER</p>
+          <p class="info extra"></p>
+          <div class="containerScore">
+            <p class="smallSans">score:</p>
+            <p class="smallSans scorePlayer">0</p>
+          </div>
         </div>
         <div class="cardsPlayer"></div>
       </div>
@@ -80,11 +82,13 @@
         </ul> 
       </div>
       <div class="containerCards"> 
-        <p class="name">DEALER</p>
-        <p class="info extra"></p>
-        <div class="containerScore">
-          <p class="smallSans">score:</p>
-          <p class="smallSans scoreDealer hide">0</p>
+        <div class="containerCardsInfo">
+          <p class="name">DEALER</p>
+          <p class="info extra"></p>
+          <div class="containerScore">
+            <p class="smallSans">score:</p>
+            <p class="smallSans scoreDealer hide">0</p>
+          </div>
         </div>
         <div class="cardsDealer"></div>
       </div>   
