Add extra info text when lives is zero

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="containerProgress">
           <div class="containerRndLvs">
             <p class="smallSans">round</p>
-            <p class="largeNr rounds"></p>
+            <p class="largeNr rounds">0</p>
           </div>
           <div class="containerRndLvs">
-            <p class="largeNr lives"></p>
+            <p class="largeNr lives">0</p>
             <p class="lifeTxt smallSans">lives</p>
           </div>
         </div>
@@ -76,7 +76,7 @@
             Player's hand value is too high (BUST).
           </li>
           <li>
-            <span class="spanList">-2 lives:</span>
+            <span class="spanList">-3 lives:</span>
             Dealer draws BLACKJACK.
           </li>
         </ul> 
