--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
             <span class="spanList">-3 lives:</span>
             Dealer draws BLACKJACK.
           </li>
-        </ul> 
+        </ul>
+        <div class="copyright">&#169; 2023 Esther T. Siebesma</div> 
       </div>
       <div class="containerCards"> 
         <div class="containerCardsInfo">
