Add img preloader / fix bug 'jumping cards' again

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p class="smallSans scorePlayer">0</p>
           </div>
         </div>
-        <div class="cardsPlayer"></div>
+        <div class="boxCardsPlr"></div>
       </div>
       <div class="containerAction">
         <div class="containerProgress">
@@ -90,7 +90,7 @@
             <p class="smallSans scoreDealer hide">0</p>
           </div>
         </div>
-        <div class="cardsDealer"></div>
+        <div class="boxCardsDlr"></div>
       </div>   
     </div>   
     <script src="./script.js"></script>
