Fix 'copy/paste' spelling error

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             Player's hand value is 1 point too high (BUST).
           </li>
           <li>
-            <span class="spanList">-1 lives:</span>
+            <span class="spanList">-1 life:</span>
             Dealer beats Player with higher hand value.
           </li>
           <li>
